# cocos2d-ruby

./: README.md
cocos/scripting/ruby-bindings/: CMakeLists.txt
cocos/scripting/ruby-bindings/auto/: ruby_cocos2dx_3d_auto.cpp  ruby_cocos2dx_3d_auto.hpp  ruby_cocos2dx_3d_auto_data_types.h  ruby_cocos2dx_audioengine_auto.cpp  ruby_cocos2dx_audioengine_auto.hpp  ruby_cocos2dx_audioengine_auto_data_types.h  ruby_cocos2dx_auto.cpp  ruby_cocos2dx_auto.hpp  ruby_cocos2dx_auto_data_types.h  ruby_cocos2dx_experimental_auto.cpp  ruby_cocos2dx_experimental_auto.hpp  ruby_cocos2dx_experimental_auto_data_types.h  ruby_cocos2dx_experimental_video_auto.cpp  ruby_cocos2dx_experimental_video_auto.hpp  ruby_cocos2dx_experimental_video_auto_data_types.h  ruby_cocos2dx_spine_auto.cpp  ruby_cocos2dx_spine_auto.hpp  ruby_cocos2dx_spine_auto_data_types.h  ruby_cocos2dx_ui_auto.cpp  ruby_cocos2dx_ui_auto.hpp  ruby_cocos2dx_ui_auto_data_types.h
cocos/scripting/ruby-bindings/auto/api/: .rb  Action.rb  ActionCamera.rb  ActionEase.rb  ActionInstant.rb  ActionInterval.rb  ActionManager.rb  ActionTween.rb  AmbientLight.rb  Animate.rb  Animate3D.rb  Animation.rb  Animation3D.rb  Animation3DData.rb  AnimationCache.rb  AnimationFrame.rb  AnimationFrameData.rb  Application.rb  AsyncTaskPool.rb  AtlasNode.rb  AttachNode.rb  AudioEngine.rb  AudioProfile.rb  BaseLight.rb  BezierBy.rb  BezierTo.rb  BillBoard.rb  Blink.rb  Button.rb  CallFunc.rb  Camera.rb  CardinalSplineBy.rb  CardinalSplineTo.rb  CatmullRomBy.rb  CatmullRomTo.rb  CheckBox.rb  ClippingNode.rb  ClippingRectangleNode.rb  Color3B.rb  Color4B.rb  (+272 more)
cocos/scripting/ruby-bindings/auto/keyword/: ruby_cocos2dx_3d_auto_keyword.py  ruby_cocos2dx_audioengine_auto_keyword.py  ruby_cocos2dx_auto_keyword.py  ruby_cocos2dx_experimental_auto_keyword.py  ruby_cocos2dx_experimental_video_auto_keyword.py  (+2 more)
cocos/scripting/ruby-bindings/manual/: RubyBasicConversions.cpp  RubyBasicConversions.h  RubyEngine.cpp  RubyEngine.h  ruby_global_manual.cpp  ruby_global_manual.hpp
cocos/scripting/ruby-bindings/proj.android/: Android.mk
cocos/scripting/ruby-bindings/proj.ios_mac/: .gitignore
(+116 files in other folders)
